<resources>
    <string name="app_name" translatable="false">AppList</string>
    <string name="app_icon_desc">app icon</string>
    <string name="userApps">User Apps</string>
    <string name="systemApps">System Apps</string>
    <string name="allApps">All Apps</string>
    <string name="byName">By Name</string>
    <string name="byLastUpdateTime">By LastUpdateTime</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="hint_search">Search</string>
    <string name="date">%04d/%02d/%02d</string>
</resources>